LaTex: update and improve summary and introduction

--- a/LaTex/glosario_info.tex
+++ b/LaTex/glosario_info.tex
@@ -1,8 +1,8 @@
 % !TeX root = ../tfg.tex
 % !TeX encoding = utf8
 
-\chapter*{Glosario de términos informáticos}
-\addcontentsline{toc}{chapter}{Glosario de términos informáticos} % Añade el glosario a la tabla de contenidos
+\chapter*{Glosario informático}
+\addcontentsline{toc}{chapter}{Glosario informático} % Añade el glosario a la tabla de contenidos
 
 \begin{description} 
   \item[$\mathcal{X}$] Espacio muestral que contiene todas las entradas posibles para un modelo.
