--- a/LaTex/glosario_mates.tex
+++ b/LaTex/glosario_mates.tex
@@ -1,8 +1,8 @@
 % !TeX root = ../tfg.tex
 % !TeX encoding = utf8
 
-\chapter*{Glosario de notación matemática}
-\addcontentsline{toc}{chapter}{Glosario de notación matemática} % Añade el glosario a la tabla de contenidos
+\chapter*{Glosario matemático}
+\addcontentsline{toc}{chapter}{Glosario matemático} % Añade el glosario a la tabla de contenidos
 
 \begin{description} 
   \item[$\mathbb{R}$] Conjunto de números reales.
