--- a/LaTex/tfg.tex
+++ b/LaTex/tfg.tex
@@ -102,6 +102,7 @@
 \appendix % Reinicia la numeración de los capítulos y usa letras para numerarlos
 \pdfbookmark[-1]{Apéndices}{appendix} % Alternativamente podemos agrupar los apéndices con un nuevo \part{Apéndices}
 
+\part{Anexos}
 \input{apendices/apendice01}
 \input{apendices/apendice02}
 \input{apendices/apendice03}
